--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <img class="course-icon" src="https://image.flaticon.com/icons/svg/1803/1803675.svg" alt="development-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
-          <h3>Internet of Robotic Things</h3>
+          <h3>Development</h3>
           <p class="text-left">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
           </p>
