--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </p>
         </div>
       </div>
-      <hr class="divider my-4">
+      <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
           <img class="course-icon" src="https://image.flaticon.com/icons/svg/1803/1803675.svg" alt="development-img">
@@ -173,7 +173,7 @@
           </p>
         </div>
       </div>
-      <hr class="divider my-4">
+      <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-first my-auto">
           <img class="course-icon" src="https://image.flaticon.com/icons/svg/428/428313.svg" alt="electronics-img">
