--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="dropdown-item" href="#">Spanish</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Development</h6>
-            <a class="dropdown-item" href="/courses/web.html">Web-Dev</a>
+            <a class="dropdown-item" href="courses/web.html">Web-Dev</a>
             <a class="dropdown-item" href="#">App-Dev</a>
             <a class="dropdown-item" href="#">Game-Dev</a>  
             <a class="dropdown-item" href="#">iOS-Dev</a>         
