static pages added
Pages for different courses are added to the courses directory and the files are linked to one another.

--- a/courses/french.html
+++ b/courses/french.html
@@ -35,12 +35,12 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <h6 class="dropdown-header text-muted text-uppercase">Languages</h6>
-            <a class="dropdown-item" href="french.html">French</a>
+            <a class="dropdown-item" href="#">French</a>
             <a class="dropdown-item" href="german.html">German</a>
             <a class="dropdown-item" href="spanish.html">Spanish</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Development</h6>
-            <a class="dropdown-item" href="#">Web-Dev</a>
+            <a class="dropdown-item" href="web.html">Web-Dev</a>
             <a class="dropdown-item" href="app.html">App-Dev</a>
             <a class="dropdown-item" href="game.html">Game-Dev</a>  
             <a class="dropdown-item" href="ios.html">iOS-Dev</a>         
@@ -75,11 +75,11 @@
         <div class="course-intro">
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
-                    <h2>Web-Development for Beginners</h2>
+                    <h2>Learn French from basics.</h2>
                     <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
-                    <img class="course-icon" src="../Assets/Images/webLogo.png">
+                    <img class="course-icon" src="../Assets/Images/frenchlogo.png">
                 </div>
             </div>
         </div>
