--- a/courses/game.html
+++ b/courses/game.html
@@ -40,9 +40,9 @@
             <a class="dropdown-item" href="spanish.html">Spanish</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Development</h6>
-            <a class="dropdown-item" href="#">Web-Dev</a>
+            <a class="dropdown-item" href="web.html">Web-Dev</a>
             <a class="dropdown-item" href="app.html">App-Dev</a>
-            <a class="dropdown-item" href="game.html">Game-Dev</a>  
+            <a class="dropdown-item" href="#">Game-Dev</a>  
             <a class="dropdown-item" href="ios.html">iOS-Dev</a>         
             <div class="dropdown-divider"></div>   
             <h6 class="dropdown-header text-muted text-uppercase">Internet of Robotic Things</h6>
@@ -75,11 +75,11 @@
         <div class="course-intro">
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
-                    <h2>Web-Development for Beginners</h2>
+                    <h2>Game Development for Beginners</h2>
                     <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
-                    <img class="course-icon" src="../Assets/Images/webLogo.png">
+                    <img class="course-icon" src="../Assets/Images/gameLogo.png">
                 </div>
             </div>
         </div>
