--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <h6 class="dropdown-header text-muted text-uppercase">Languages</h6>
-            <a class="dropdown-item" href="#">French</a>
-            <a class="dropdown-item" href="#">German</a>
-            <a class="dropdown-item" href="#">Spanish</a>
+            <a class="dropdown-item" href="courses/french.html">French</a>
+            <a class="dropdown-item" href="courses/german.html">German</a>
+            <a class="dropdown-item" href="courses/spanish.html">Spanish</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Development</h6>
             <a class="dropdown-item" href="courses/web.html">Web-Dev</a>
-            <a class="dropdown-item" href="#">App-Dev</a>
-            <a class="dropdown-item" href="#">Game-Dev</a>  
-            <a class="dropdown-item" href="#">iOS-Dev</a>         
+            <a class="dropdown-item" href="courses/app.html">App-Dev</a>
+            <a class="dropdown-item" href="courses/game.html">Game-Dev</a>  
+            <a class="dropdown-item" href="courses/ios.html">iOS-Dev</a>         
             <div class="dropdown-divider"></div>   
             <h6 class="dropdown-header text-muted text-uppercase">Internet of Robotic Things</h6>
             <a class="dropdown-item" href="#">Internet of Things</a>
@@ -152,7 +152,7 @@
     <div class="middle-container">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12 order-sm-first my-auto ">
-          <img class="course-icon" src="https://image.flaticon.com/icons/svg/2302/2302903.svg" alt="languages-img">
+          <img class="course-icon" src="Assets/Images/langIcon.svg" alt="languages-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Languages</h3>
@@ -164,7 +164,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
-          <img class="course-icon" src="https://image.flaticon.com/icons/svg/1803/1803675.svg" alt="development-img">
+          <img class="course-icon" src="Assets/Images/devIcon.svg" alt="development-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Development</h3>
@@ -176,7 +176,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-first my-auto">
-          <img class="course-icon" src="https://image.flaticon.com/icons/svg/428/428313.svg" alt="electronics-img">
+          <img class="course-icon" src="Assets/Images/iotIcon.svg" alt="electronics-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Internet of Robotic Things</h3>
