--- a/courses/dm.html
+++ b/courses/dm.html
@@ -36,12 +36,12 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <h6 class="dropdown-header text-muted text-uppercase">Languages</h6>
             <a class="dropdown-item" href="french.html">French</a>
-            <a class="dropdown-item" href="german.html">German</a>
+            <a class="dropdown-item" href="#">German</a>
             <a class="dropdown-item" href="spanish.html">Spanish</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Development</h6>
             <a class="dropdown-item" href="web.html">Web-Dev</a>
-            <a class="dropdown-item" href="#">App-Dev</a>
+            <a class="dropdown-item" href="app.html">App-Dev</a>
             <a class="dropdown-item" href="game.html">Game-Dev</a>  
             <a class="dropdown-item" href="ios.html">iOS-Dev</a>         
             <div class="dropdown-divider"></div>   
@@ -51,7 +51,7 @@
             <a class="dropdown-item" href="drone.html">Drone Making</a>        
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Marketing</h6>
-            <a class="dropdown-item" href="dm.html">Digital Marketing</a>
+            <a class="dropdown-item" href="#">Digital Marketing</a>
           </div>
         </div>
 
@@ -75,11 +75,11 @@
         <div class="course-intro">
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
-                    <h2>Android App-Development for Beginners</h2>
+                    <h2>Enhance your skills in Digital Marketing.</h2>
                     <h6><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente id, debitis odio rem repellendus eum ipsa quis reprehenderit libero saepe quaerat doloremque suscipit laudantium similique minima quasi praesentium possimus temporibus?</p></h6>
                 </div>
                 <div class="col-sm-6 col-12">
-                    <img class="course-icon" src="../Assets/Images/appLogo.jpg">
+                    <img class="course-icon" src="../Assets/Images/dmLogo.jpg">
                 </div>
             </div>
         </div>
