--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             <a class="dropdown-item" href="courses/ios.html">iOS-Dev</a>         
             <div class="dropdown-divider"></div>   
             <h6 class="dropdown-header text-muted text-uppercase">Internet of Robotic Things</h6>
-            <a class="dropdown-item" href="#">Internet of Things</a>
-            <a class="dropdown-item" href="#">Robotics</a>
-            <a class="dropdown-item" href="#">Drone Making</a>        
+            <a class="dropdown-item" href="courses/iot.html">Internet of Things</a>
+            <a class="dropdown-item" href="courses/robotics.html">Robotics</a>
+            <a class="dropdown-item" href="courses/drone.html">Drone Making</a>        
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header text-muted text-uppercase">Marketing</h6>
-            <a class="dropdown-item" href="#">Digital Marketing</a>
+            <a class="dropdown-item" href="courses/dm.html">Digital Marketing</a>
           </div>
         </div>
 
