--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="google-signin-client_id" content="714219498694-90oa6fcmmbtgs19b0f1bmrs2us3cr5m9.apps.googleusercontent.com">
 
+  <script src="https://kit.fontawesome.com/b3a074ef19.js" crossorigin="anonymous"></script>
+  
   <title>LearnYuva | Igniting Young Minds</title>
   <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet">
@@ -190,8 +192,10 @@
 
   <div class="bottom-container">
     <div class="social text-center">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+      <a class="footer-link" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
+      <a class="footer-link" href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+      
     </div>
     <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
   </div>
