--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
       </div>
     </div>
   </div>
-
+fa-lg
   <div class="bottom-container">
     <div class="social text-center">
-      <a class="footer-link" href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
-      <a class="footer-link" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
-      <a class="footer-link" href="https://instagram.com/"><i class="fab fa-instagram"></i></a>
+      <a class="footer-link" href="https://www.facebook.com/"><i class="fab fa-facebook fa-lg"></i></a>
+      <a class="footer-link" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in fa-lg"></i></a>
+      <a class="footer-link" href="https://instagram.com/"><i class="fab fa-instagram fa-lg"></i></a>
       
     </div>
     <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
