--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="google-signin-client_id" content="714219498694-90oa6fcmmbtgs19b0f1bmrs2us3cr5m9.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="714219498694-6lb9kmv2dc3npbl65hsnp4ssbuq1k3up.apps.googleusercontent.com">
 
   <title>LearnYuva | Igniting Young Minds</title>
   <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/favicon.ico" />
@@ -115,11 +115,47 @@
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
-              <div class="g-signin2" data-onsuccess="onSignIn"></div>
-            </div>
+              <form>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-12 text-center my-auto d-none d-sm-block">Name</label>
+                  <div class="col-sm-9 col-12 text-center">
+                    <input type="text" id="name" class="form-control" placeholder="Enter you Name">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-12 text-center my-auto d-none d-sm-block">Email</label>
+                  <div class="col-sm-9 col-12 text-center">
+                    <input type="email" id="email" class="form-control" placeholder="Enter your Email">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-12 text-center my-auto d-none d-sm-block">Mobile No. </label>
+                  <div class="col-sm-9 col-12 text-center">
+                    <input type="tel" id="mobile" class="form-control" placeholder="Enter your Mobile Number">
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-3 col-12 text-center d-none d-sm-block">Password</label>
+                  <div class="col-sm-9 col-12 text-center">
+                    <input type="password" id="password" class="form-control" placeholder="Enter Your Password">
+                    <small class="form-text text-muted float-left" >Your password must be 8-20 characters long.</small>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="col-12">
+                    <div class="btn btn-primary btn-block">
+                      Submit & SignUp
+                    </div>
+                  </div>
+                  <!--div class="col-sm-6 ">
+                    <div class="g-signin2 btn-block" data-onsuccess="onSignIn" style="width: 280px; overflow: hidden;"></div>
+                  </div-->
+                </div>
+            </form>
           </div>
         </div>
       </div>
+    </div>
     <!--End of Signup Modal-->
 
   <!--Modals End-->
