--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="google-signin-client_id" content="714219498694-6lb9kmv2dc3npbl65hsnp4ssbuq1k3up.apps.googleusercontent.com">
-
-  <script src="https://kit.fontawesome.com/b3a074ef19.js" crossorigin="anonymous"></script>
+  <!--meta name="google-signin-client_id" content="714219498694-6lb9kmv2dc3npbl65hsnp4ssbuq1k3up.apps.googleusercontent.com"-->
   
   <title>LearnYuva | Igniting Young Minds</title>
-  <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="../Assets/Images/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -21,8 +19,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand h1" href="#">
       <div class="logo">
-        <img src="Assets/Images/logoWhite.png" height="60px" width="47px">
-        <img src="Assets/Images/textWhite.png" height="40px" width="116px" class="my-auto">
+        <img src="../Assets/Images/logoWhite.png" height="60px" width="47px">
+        <img src="../Assets/Images/textWhite.png" height="40px" width="116px" class="my-auto">
       </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#newsMenu" aria-controls="newsMenu" aria-expanded="false" aria-lable="Toggle navigation">
@@ -78,8 +76,8 @@
         <div class="modal-content">
           <div class="modal-header">
             <div class="logo">
-              <img src="Assets/Images/logoImg.png" height="60px" width="47px">
-              <img src="Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
+              <img src="../Assets/Images/logoImg.png" height="60px" width="47px">
+              <img src="../Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
             </div>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
@@ -111,8 +109,8 @@
           <div class="modal-content">
             <div class="modal-header">
               <div class="logo">
-                <img src="Assets/Images/logoImg.png" height="60px" width="47px">
-                <img src="Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
+                <img src="../Assets/Images/logoImg.png" height="60px" width="47px">
+                <img src="../Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
               </div>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
@@ -190,7 +188,7 @@
     <div class="middle-container">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12 order-sm-first my-auto ">
-          <img class="course-icon" src="Assets/Images/langIcon.svg" alt="languages-img">
+          <img class="course-icon" src="../Assets/Images/langIcon.svg" alt="languages-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Languages</h3>
@@ -202,7 +200,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
-          <img class="course-icon" src="Assets/Images/devIcon.svg" alt="development-img">
+          <img class="course-icon" src="../Assets/Images/devIcon.svg" alt="development-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Development</h3>
@@ -214,7 +212,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-first my-auto">
-          <img class="course-icon" src="Assets/Images/iotIcon.svg" alt="electronics-img">
+          <img class="course-icon" src="../Assets/Images/iotIcon.svg" alt="electronics-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Internet of Robotic Things</h3>
@@ -228,9 +226,9 @@
 
   <div class="bottom-container">
     <div class="social text-center">
-      <a class="footer-link" href="https://www.facebook.com/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
+      <a class="footer-link" href="https://www.facebook.com/learnyuva/"><i class=" fa-fw fab fa-facebook fa-lg"></i></a>
       <a class="footer-link" href="https://www.linkedin.com/"><i class="fa-fw fab fa-linkedin-in fa-lg"></i></a>
-      <a class="footer-link" href="https://instagram.com/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
+      <a class="footer-link" href="https://www.instagram.com/learnyuva/"><i class="fa-fw fab fa-instagram fa-lg"></i></a>
       
     </div>
     <h5 class="text-center">© 2020 LearnYuva All rights reserved.</h5>
@@ -239,14 +237,16 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
-  <script src="https://apis.google.com/js/api.js"></script>
+  <script src="../js/scripts.js"></script>
+  <script src="https://kit.fontawesome.com/b3a074ef19.js" crossorigin="anonymous"></script>
+  <!--script src="https://apis.google.com/js/api.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  
   <script>
     gapi.load("auth2", function(){
     gapi.auth.init();
   });
-  </script>
+  </script-->
 </body>
 
 </html>
