--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!--meta name="google-signin-client_id" content="714219498694-6lb9kmv2dc3npbl65hsnp4ssbuq1k3up.apps.googleusercontent.com"-->
   
   <title>LearnYuva | Igniting Young Minds</title>
-  <link rel="shortcut icon" type="image/x-icon" href="../Assets/Images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/favicon.ico" />
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -19,8 +19,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand h1" href="#">
       <div class="logo">
-        <img src="../Assets/Images/logoWhite.png" height="60px" width="47px">
-        <img src="../Assets/Images/textWhite.png" height="40px" width="116px" class="my-auto">
+        <img src="Assets/Images/logoWhite.png" height="60px" width="47px">
+        <img src="Assets/Images/textWhite.png" height="40px" width="116px" class="my-auto">
       </div>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#newsMenu" aria-controls="newsMenu" aria-expanded="false" aria-lable="Toggle navigation">
@@ -76,8 +76,8 @@
         <div class="modal-content">
           <div class="modal-header">
             <div class="logo">
-              <img src="../Assets/Images/logoImg.png" height="60px" width="47px">
-              <img src="../Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
+              <img src="Assets/Images/logoImg.png" height="60px" width="47px">
+              <img src="Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
             </div>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
@@ -109,8 +109,8 @@
           <div class="modal-content">
             <div class="modal-header">
               <div class="logo">
-                <img src="../Assets/Images/logoImg.png" height="60px" width="47px">
-                <img src="../Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
+                <img src="Assets/Images/logoImg.png" height="60px" width="47px">
+                <img src="Assets/Images/logoText.png" height="40px" width="116px" class="my-auto">
               </div>
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
@@ -188,7 +188,7 @@
     <div class="middle-container">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12 order-sm-first my-auto ">
-          <img class="course-icon" src="../Assets/Images/langIcon.svg" alt="languages-img">
+          <img class="course-icon" src="Assets/Images/langIcon.svg" alt="languages-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Languages</h3>
@@ -200,7 +200,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
-          <img class="course-icon" src="../Assets/Images/devIcon.svg" alt="development-img">
+          <img class="course-icon" src="Assets/Images/devIcon.svg" alt="development-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto course-text">
           <h3>Development</h3>
@@ -212,7 +212,7 @@
       <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-first my-auto">
-          <img class="course-icon" src="../Assets/Images/iotIcon.svg" alt="electronics-img">
+          <img class="course-icon" src="Assets/Images/iotIcon.svg" alt="electronics-img">
         </div>
         <div class="col-sm-8 col-12 order-sm-first my-auto">
           <h3>Internet of Robotic Things</h3>
