--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
           </p>
         </div>
       </div>
+      <hr class="divider">
       <div class="row">
         <div class="col-sm-4 col-12 order-sm-last my-auto">
           <img class="course-icon" src="Assets/Images/marketingIcon.png" alt="development-img">
@@ -232,6 +233,18 @@
           </p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-4 col-12 order-sm-first my-auto">
+          <img class="course-icon" src="Assets/Images/codingIcon.png" alt="electronics-img">
+        </div>
+        <div class="col-sm-8 col-12 order-sm-first my-auto">
+          <h3>Coding</h3>
+          <p class="text-left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque esse modi molestiae recusandae, nam dolores nisi sequi beatae. Eligendi provident officia nulla quo voluptate eveniet incidunt in quaerat ipsa non.
+          </p>
+        </div>
+      </div>
+      <hr class="divider">
     </div>
   </div>
 
