--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!--meta name="google-signin-client_id" content="714219498694-6lb9kmv2dc3npbl65hsnp4ssbuq1k3up.apps.googleusercontent.com"-->
   
   <title>LearnYuva | Igniting Young Minds</title>
-  <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/logoWhite.png">
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
